--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,3 +1,8 @@
+FROM maven:3.6.0-jdk-11-slim AS build
+COPY src /home/app/src
+COPY pom.xml /home/app
+RUN mvn -f /home/app/pom.xml clean package
+
 FROM openjdk:8-jdk-alpine
-COPY demo-0.0.1-SNAPSHOT.war app.war
-ENTRYPOINT ["java","-war","/app.war"]
+COPY  --from=build /home/app/target/demo-0.0.1-SNAPSHOT.jar app.jar
+ENTRYPOINT ["java","-jar","/app.jar"]
